--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,27 @@
-<div>
-<h1>Login</h1>
-</div>
-<router-outlet></router-outlet>
+<div layout-padding flex>
+    <div layout-gt-xs="row" layout-align-gt-xs="center start" class="margin">
+      <div flex-gt-xs="50">
+        <mat-card>
+          <mat-card-title>PublicSoft - Painel Administrativo</mat-card-title>
+          <mat-card-subtitle>Entre com seu email e senha.</mat-card-subtitle>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <form [formGroup]="loginForm" (ngSubmit)="autenticar();" layout="row" layout-align="center center" layout-margin>
+              <div fxLayout="column" fxFlex>
+              <mat-form-field>
+                <input matInput fxFlex placeholder="Email" type="text" name="email" formControlName="email" required />
+                <mat-icon matPrefix>person</mat-icon>
+              </mat-form-field>
+              <mat-form-field >
+              <input matInput flex placeholder="Senha" type="password" name="password" formControlName="password" required/>
+                <mat-icon matPrefix>lock</mat-icon>
+              </mat-form-field>
+              <button mat-raised-button color="primary" [disabled]="!loginForm.valid" (click)="autenticar()">Entrar</button>
+              </div>
+            </form>
+          </mat-card-content>
+          <mat-divider></mat-divider>
+        </mat-card>
+      </div>
+    </div>
+  </div>
