--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,4 @@
 .mat-list-item {
 	outline: none;
-
-	&:hover, &.mat-list-item-focus {
-		opacity: 0.7;
-		box-shadow:0 0 0 1px white;
-	}
+	color: white;
 }
