--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,8 +2,7 @@
     <div layout-gt-xs="row" layout-align-gt-xs="center start" class="margin">
       <div flex-gt-xs="50">
         <mat-card>
-          <mat-card-title>PublicSoft - Painel Administrativo</mat-card-title>
-          <mat-card-subtitle>Entre com seu email e senha.</mat-card-subtitle>
+          <mat-card-title>PublicSoft - Login</mat-card-title>
           <mat-divider></mat-divider>
           <mat-card-content>
             <form [formGroup]="loginForm" (ngSubmit)="autenticar();" layout="row" layout-align="center center" layout-margin>
@@ -25,3 +24,5 @@
       </div>
     </div>
   </div>
+
+  <router-outlet></router-outlet>
