Changes: removing covalente, styles, clients routing, client form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<td-layout>
+<!-- <td-layout>
   <td-layout-nav>
     <div td-toolbar-content layout="row" layout-align="start center" flex>
       <button mat-icon-button class="td-menu-button bg-transparent" (click)="sidenav.toggle()" mdTooltip="Main menu">
@@ -21,5 +21,5 @@
 
   </td-layout-nav>
 
-</td-layout>
+</td-layout> -->
 <router-outlet></router-outlet>
