--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 // @import '~@angular/material/theming';
 // @import '~@covalent/core/theming/all-theme';
-// @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 // @include mat-core();
+
+@media only screen and (min-width : 1280px) {
+	.mat-card {
+		margin-left: 8rem;
+		margin-right: 8rem;
+		transform: translatey(15%);
+	}
+}
+
+@media only screen and (min-width: 1367px) {
+	.mat-card {
+		transform: translatey(30%);
+	}
+}
 
 .mat-toolbar {
 	background: #0cb8f3 !important;
