Add Json-Server; Add Client List Component; Altering Client Creation;

--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -6,14 +6,14 @@
     <form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
       <mat-card-subtitle>Selecione o tipo do Cliente</mat-card-subtitle>
       <div layout="row">
-        <mat-form-field>
+        <!-- <mat-form-field> -->
           <input type="radio" name="client_type" value="PF" formControlName="client_type" (click)="print()"/>
           <label>Pessoa Física</label>
-        </mat-form-field>
-        <mat-form-field>
+        <!-- </mat-form-field> -->
+        <!-- <mat-form-field> -->
           <input type="radio" name="client_type" value="PJ" formControlName="client_type" (click)="print()"/>
           <label>Pessoa Jurídica</label>
-        </mat-form-field>
+        <!-- </mat-form-field> -->
       </div>
 
       <div formGroupName="pf" *ngIf="clientForm.controls.client_type.value == 'PF'">
@@ -119,7 +119,7 @@
 
   <mat-card-actions>
     <button mat-button (click)="reset()" color="primary">Limpar</button>
-    <button mat-button type="submit">Salvar</button>
+    <button mat-button type="submit" (click)="onSubmit()">Salvar</button>
   </mat-card-actions>
 </mat-card>
 
