--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -52,7 +52,7 @@
         </div>
         <div layout="row">
           <mat-form-field flex>
-            <input matInput placeholder="CNPJ" formControlName="cnpj" [textMask]="{mask: cnpjMask}" maxLength="14">
+            <input matInput placeholder="CNPJ" formControlName="cnpj" [textMask]="{mask: cnpjMask}">
           </mat-form-field>
           <mat-form-field flex>
             <input matInput placeholder="Inscrição Estadual" formControlName="inscricao_estadual">
