--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,5 +21,10 @@
 
   </td-layout-nav>
 
+    <td-layout-footer>
+      <div layout="row" layout-align="start center">
+        <span class="mat-caption">Copyright &copy; 2018. All rights reserved</span>
+      </div>
+    </td-layout-footer>
 </td-layout> -->
 <router-outlet></router-outlet>
