--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -66,8 +66,7 @@
           <mat-form-field flex>
             <input type="email" matInput placeholder="Email" formControlName="email">
           </mat-form-field>
-        </div>
-        <div layout="row">
+
           <mat-form-field flex>
             <input matInput placeholder="Fone" formControlName="fone" [textMask]="{mask: foneMask}">
           </mat-form-field>
@@ -90,8 +89,7 @@
           <mat-form-field flex>
             <input matInput placeholder="Número" formControlName="numero">
           </mat-form-field>
-        </div>
-        <div layout="row">
+
           <mat-form-field flex>
             <input matInput placeholder="Bairro" formControlName="bairro">
           </mat-form-field>
@@ -100,8 +98,7 @@
           <mat-form-field flex>
             <input matInput placeholder="Cidade" formControlName="cidade">
           </mat-form-field>
-        </div>
-        <div layout="row">
+
           <mat-form-field flex>
             <mat-select placeholder="Estado" formControlName="estado">
               <mat-option *ngFor="let estado of estados" value="estado.sigla">
@@ -118,10 +115,13 @@
   <mat-divider></mat-divider>
 
   <mat-card-actions>
-    <button mat-button (click)="reset()" color="primary">Limpar</button>
-    <button mat-button type="submit" (click)="onSubmit()">Salvar</button>
+    <div layout="row" class="form-buttons">
+      <button mat-button [disabled]="!clientForm.controls['client_type'].value"(click)="reset()">Limpar</button>
+      <button mat-button type="submit" color="primary" [disabled]="!clientForm.controls['client_type'].value" (click)="onSubmit()">Salvar</button>
+    </div>
   </mat-card-actions>
 </mat-card>
 
 
 <router-outlet></router-outlet>
+
