--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,7 @@
 
 @media only screen and (min-width : 1280px) {
 	.mat-card {
-		margin-left: 8rem;
-		margin-right: 8rem;
+		margin: 3rem 12rem;
 		transform: translatey(3rem);
 	}
 }
