--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
 		</button>
 	</div>
 
-	<label> FrontEnd Jr 2018 </label>
+	<label> Angular 5 - 2018 </label>
 
 	<div class="right-align">
 		<button mat-icon-button class="bg-transparent" (click)="logout()" mdTooltip="Main menu">
